terraform-aws-eks/vpc.tf
resource "aws_vpc" "vini_eks_vpc" {
  cidr_block           = var.cidr_block
  instance_tenancy     = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name    = "vini-eks-vpc"
    Project = "vini-eks"
  }
}
